--- a/src/AmtPtpDeviceUniversalPkg/AmtPtpDeviceUniversalPkg.vcxproj
+++ b/src/AmtPtpDeviceUniversalPkg/AmtPtpDeviceUniversalPkg.vcxproj
@@ -67,13 +67,6 @@
   <PropertyGroup Condition="'$(BuildEnvironment)'=='Github'">
     <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
-  <!-- Note: AzDevOps Pipeline might override this -->
-  <PropertyGroup Condition="'$(ProductionCertPath)'==''">
-    <ProductionCertPath>
-    </ProductionCertPath>
-    <TimeStampServer>http://timestamp.digicert.com</TimeStampServer>
-    <SignMode>ProductionSign</SignMode>
-  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <TargetVersion>Windows10</TargetVersion>
@@ -190,10 +183,12 @@
     <TimeStampServer>http://timestamp.digicert.com</TimeStampServer>
     <SignMode>TestSign</SignMode>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)'=='ReleaseSigned'">
+  <!-- For release signed config on Azure pipeline, CI pipeline don't sign it. We do that locally -->
+  <PropertyGroup  Condition="'$(Configuration)'=='ReleaseSigned'">
     <TimeStampServer>http://timestamp.digicert.com</TimeStampServer>
     <ProductionCertificate>$(ProductionCertPath)</ProductionCertificate>
-    <SignMode>ProductionSign</SignMode>
+    <SignMode Condition="'$(BuildEnvironment)'!='AzurePipeline'">ProductionSign</SignMode>
+    <SignMode Condition="'$(BuildEnvironment)'=='AzurePipeline'">Off</SignMode>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <DriverSign>
