Just need to port input parsing logic to here...

--- a/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj
+++ b/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj
@@ -277,6 +277,7 @@
     <ClInclude Include="include\Hac.h" />
     <ClInclude Include="include\HidCommon.h" />
     <ClInclude Include="include\HidMiniport.h" />
+    <ClInclude Include="include\Input.h" />
     <ClInclude Include="include\Metadata\MagicTrackpad2.h" />
     <ClInclude Include="include\Metadata\StaticHidRegistry.h" />
     <ClInclude Include="include\Metadata\WindowsHID.h" />
