--- a/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj.filters
+++ b/src/AmtPtpHidFilter/AmtPtpHidFilter.vcxproj.filters
@@ -88,5 +88,8 @@
     <ClInclude Include="include\Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\HidDevice.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
