Project: set SDK to latest to avoid build break
See https://docs.microsoft.com/en-us/windows-hardware/drivers/wdk-known-issues

--- a/src/AmtPtpDeviceUniversalPkg/AmtPtpDeviceUniversalPkg.vcxproj
+++ b/src/AmtPtpDeviceUniversalPkg/AmtPtpDeviceUniversalPkg.vcxproj
@@ -65,7 +65,7 @@
     <RootNamespace>AmtPtpDeviceUniversalPkg</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
-    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(BuildEnvironment)'=='Github'">
     <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
